@@ -45,6 +45,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20435: Fix _pyio.StringIO.getvalue() to take into account newline
+  translation settings.
+
 - Issue #20288: fix handling of invalid numeric charrefs in HTMLParser.
 
 - Issue #20424: Python implementation of io.StringIO now supports lone surrogates.
